--- a/stacks/wordpress/docker-compose.yml
+++ b/stacks/wordpress/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3'
 services:
   mysql:
     image: 'mysql:5.7.24'
@@ -6,9 +6,7 @@ services:
       - MYSQL_ROOT_PASSWORD=${DB_ROOT_PW}
       - MYSQL_DATABASE=wordpress
       - MYSQL_USER=wordpress
-      - MYSQL_PASSWORD=${DB_WP_PW}
-    volumes:
-      - db:/var/lib/mysql
+      - MYSQL_PASSWORD=${DB_PASSWORD}
 
   memcached:
     image: memcached
@@ -16,12 +14,12 @@ services:
   wordpress:
     image: 'ltdcox/wordpress:ubuntu1804'
     ports:
-      - ${WP_PORT}:80
+      - ${WEB_PORT}:80
     environment:
       - WORDPRESS_DB_HOST=mysql:3306
       - WORDPRESS_DB_USER=wordpress
-      - WORDPRESS_DB_PASSWORD=${DB_WP_PW}
-      - WORDPRESS_SITEURL=${DOCKER_HOST}:${WP_PORT}
+      - WORDPRESS_DB_PASSWORD=${DB_PASSWORD}
+      - WORDPRESS_SITEURL=${DOCKER_HOST}:${WEB_PORT}
     depends_on:
       gitnode:
         condition: service_healthy
@@ -32,8 +30,9 @@ services:
       - GITHUB_ORG=${ORG}
       - GITHUB_REPO=${REPO}
       - GITHUB_BRANCH=${BRANCH}
-      - GITHUB_NAME=${NAME}
-      - GITHUB_EMAIL=#{EMAIL_ADDRESS}
+      - GITHUB_NAME=${DEV_NAME}
+      - GITHUB_EMAIL=${DEV_EMAIL}
+      - GULP_BUILD_TASK=${BUILD_TASK}
     healthcheck:
       test: "exit 0"
     depends_on:
