--- a/stacks/wordpress/docker-compose.yml
+++ b/stacks/wordpress/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2.1'
+version: '3'
 services:
   mysql:
     image: 'mysql:5.7.24'
@@ -21,8 +21,7 @@ services:
       - WORDPRESS_DB_PASSWORD=${DB_PASSWORD}
       - WORDPRESS_SITEURL=${DOCKER_HOST}:${WEB_PORT}
     depends_on:
-      gitnode:
-        condition: service_healthy
+      - gitnode
 
   gitnode:
     image: 'ltdcox/gitnode'
