--- a/stacks/wordpress/docker-compose.yml
+++ b/stacks/wordpress/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   mysql:
     image: 'mysql:5.7.24'
     environment:
-      - MYSQL_ROOT_PASSWORD=${DB_ROOT_PW}
+      - MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD}
       - MYSQL_DATABASE=wordpress
       - MYSQL_USER=wordpress
       - MYSQL_PASSWORD=${DB_PASSWORD}
