add setup script to gitnode

--- a/stacks/wordpress/docker-compose.yml
+++ b/stacks/wordpress/docker-compose.yml
@@ -40,3 +40,4 @@ services:
     volumes:
       - web:/var/www/html
       - ${DB_DUMP_FILE}:/scripts/staging.sql.gz
+      - ${SETUP_SCRIPT}:/scripts/setup.sh
