--- a/stacks/wordpress/docker-compose.yml
+++ b/stacks/wordpress/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     depends_on:
       - gitnode
     volumes:
-      - web:/var/www/html
+      - ${BRANCH}/web:/var/www/html
       - ${WEB_UPLOADS}:/var/www/html/wp-content/uploads
 
   gitnode:
@@ -38,6 +38,7 @@ services:
     depends_on:
       - mysql
     volumes:
-      - web:/var/www/html
+      - ${BRANCH}/web:/var/www/html
       - ${DB_DUMP_FILE}:/scripts/staging.sql.gz
       - ${SETUP_SCRIPT}:/scripts/setup.sh
+    command: "/bin/bash /scripts/setup.sh"
