--- a/stacks/wordpress/docker-compose.yml
+++ b/stacks/wordpress/docker-compose.yml
@@ -42,4 +42,5 @@ services:
       - ${DB_DUMP_FILE}:/scripts/staging.sql.gz
       - ${SETUP_SCRIPT}:/scripts/setup.sh
       - ${SSH_KEYS}:/root/.ssh
+      - ${WEB_UPLOADS}:/var/www/html/wp-content/uploads
     command: "bash /scripts/setup.sh"
