--- a/stacks/wordpress/docker-compose.yml
+++ b/stacks/wordpress/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - WORDPRESS_DB_HOST=mysql:3306
       - WORDPRESS_DB_USER=wordpress
       - WORDPRESS_DB_PASSWORD=${DB_PASSWORD}
-      - WORDPRESS_SITEURL=${DOCKER_HOST}:${WEB_PORT}
+      - WORDPRESS_SITEURL=http://${DOCKER_HOST}:${WEB_PORT}
     depends_on:
       - gitnode
     volumes:
