--- a/stacks/wordpress/docker-compose.yml
+++ b/stacks/wordpress/docker-compose.yml
@@ -13,6 +13,7 @@ services:
 
   wordpress:
     image: 'ltdcox/wordpress:ubuntu1804'
+    restart: on-failure
     ports:
       - ${WEB_PORT}:80
     environment:
