--- a/stacks/testing/docker-compose.yml
+++ b/stacks/testing/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   mysql:
-    image: 'mysql:5.7.24'
+    image: 'mysql:5.7'
     environment:
       - MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD}
       - MYSQL_DATABASE=wordpress
@@ -12,7 +12,7 @@ services:
     image: memcached
 
   wordpress:
-    image: 'ltdcox/wordpress:ubuntu1804'
+    image: 'ltdcox/wordpress:ubuntu20.04'
     restart: on-failure
     ports:
       - ${WEB_PORT}:80
@@ -28,7 +28,7 @@ services:
       - ${WEB_UPLOADS}:/var/www/html/wp-content/uploads
 
   gitnode:
-    image: 'ltdcox/gitnode'
+    image: 'ltdcox/gitnode:ubuntu20.04'
     environment:
       - GITHUB_ORG=${ORG}
       - GITHUB_REPO=${REPO}
