--- a/stacks/testing/docker-compose.yml
+++ b/stacks/testing/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3'
 services:
   mysql:
     image: 'mysql:5.7'
@@ -47,3 +47,6 @@ services:
       - ${SSH_KEYS}:/root/.ssh
       - ${WEB_UPLOADS}:/var/www/html/wp-content/uploads
     command: "bash /scripts/setup.sh"
+
+volumes:
+  ${REPO}-${BRANCH}-web:
