--- a/stacks/wordpress/docker-compose.yml
+++ b/stacks/wordpress/docker-compose.yml
@@ -2,7 +2,7 @@
 version: "3.8"
 services:
   mysql:
-    image: 'mysql:5.7'
+    image: 'mysql:8'
     environment:
       - MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD}
       - MYSQL_DATABASE=wordpress
@@ -13,7 +13,7 @@ services:
     image: memcached
 
   wordpress:
-    image: 'ltdcox/wordpress:ubuntu1804'
+    image: 'h2ksup3rm4n/wordpress:ubuntu20.04-php8.1'
     restart: on-failure
     ports:
       - ${WEB_PORT}:80
@@ -29,7 +29,7 @@ services:
       - ${WEB_UPLOADS}:/var/www/html/wp-content/uploads
 
   gitnode:
-    image: 'ltdcox/gitnode'
+    image: 'h2ksup3rm4n/gitnode:ubuntu20.04-php8.1-nosleep'
     environment:
       - GITHUB_ORG=${ORG}
       - GITHUB_REPO=${REPO}
